<resources>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="app_name">Movie and TV Show</string>
    <string name="image_of_movie">Image of movie</string>
    <string name="poster_image">Poster Image</string>
    <string name="setting">Setting</string>
    <string name="detail_movie">Detile Movie</string>
    <string name="detail_tvShow">Detile TV Show</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="header_language">Language</string>
    <string name="chose_language">Chose Language</string>
    <string name="back_button">Back Button</string>
    <string name="zoom_image">Zoom Image</string>
    <string name="add"> has been added to Favorites </string>
    <string name="delete"> has been removed from Favorites </string>
    <string name="search">Search</string>
    <string name="appwidget_text">FAVORITE MOVIE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">Empty</string>
    <string name="header_alarm">Alarm</string>
    <string name="daily_release">Daily Release</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="release_movie_today">release movie today</string>
    <string name="lets_come">Let\'s come</string>
    <string name="release_today">released today</string>
    <string name="new_movie">New Movie</string>
    <string name="see_more_movie">See more movie</string>
    <string name="Daily_on">Daily Alarm On</string>
    <string name="daily_release_on">Release new movie Alarm On</string>
    <string name="release_off">Daily Release Alarm Off</string>
    <string name="daily_off">Daily Alarm Off</string>

</resources>
